--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-      {% if page.title %} {{ page.title }} {% endif %} | Phoebe Stierhoff
+      {% if page.title %} {{ page.title }} {% endif %} &#8857; | Phoebe Stierhoff
     </title>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/css/site.css">
@@ -18,7 +18,7 @@
     </header>
     <nav class='navbar navbar-default'>
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">&#8857;</a>
+        <span class="navbar-brand">&#8857;</span>
       </div>
       <div class='navbar-collapse'>
         <ul class='nav navbar-nav'>
@@ -30,6 +30,9 @@
             <ul class="dropdown-menu">
               <li>
                 <a href="/stellar-evolution/">Stellar Evolution</a>
+              </li>
+              <li>
+                <a href="/conferences-presentations">Conferences &amp; Presentations</a>
               </li>
             </ul>
           </li>
